Test case improvements
Signed-off-by: K. Berk Bozkurt <kberkboz@gmail.com>